--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 Calculate Average Speed</button></center>
      <br>
     <br>
-    <h1 id="answer">Avergae answer in Kmph</h1><br>
+    <h1 id="answer">Average answer in Kmph</h1><br>
     </center>
     </form>
     <br>
