--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@1&amp;display=swap" rel="stylesheet">
   <script src="main.js"></script>
-  <link rel="shortcut icon" href="https://icons-for-free.com/iconfiles/png/512/speed-1320568632465727843.png" />
+  <link rel="shortcut icon" href="https://www.pngjoy.com/pngl/88/1864170_speed-speed-icon-transparent-png.png" />
   <title>Speed Calculator</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
     <br>
     <br>
     <br>
-    <img src="https://icons-for-free.com/iconfiles/png/512/speed-1320568632465727843.png" class="logo" height="150px" width="150px" alt="img"><br>
+    <img src="https://www.pngjoy.com/pngl/88/1864170_speed-speed-icon-transparent-png.png" class="logo" height="150px" width="150px" alt="img"><br>
     <br>
     <br>
     <br>
